infra/dynamic_demo/web-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dyn-nft
  namespace: dynamic
  labels:
    name: dyn-nft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dyn-nft
  template:
    metadata:
      labels:
        app: dyn-nft
    spec:
      containers:
        - name: dyn-nft-container
          image: "blocktrustjuliensdevregistry.azurecr.io/dyn-nft:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: web-image-pull-secret-name

---

apiVersion: v1
kind: Service
metadata:
  name: dyn-nft
  namespace: dynamic
spec:
  selector:
    app: dyn-nft
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dyn-nft
  namespace: dynamic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dynamic.90fe87278689478db76e.australiaeast.aksapp.io
    http:
      paths:
        - path: /
          backend:
            service:
              name: dyn-nft
              port:
                number: 80
          pathType: Prefix
